--- a/scss/post.scss
+++ b/scss/post.scss
@@ -1,3 +1,17 @@
-#page-content {
-background-color: blueviolet;
+// Post SCSS for the theme.
+#nav-drawer {
+    background-color: #28527A;
+    }
+body.pagelayout-login {                                                                                                             
+    background-image: url([[pix:theme_caps|loginbackgroundimage]]);                                                                
+    background-size: cover;                                                                                                        
+    }
+div.card-body {
+    background-color: $white;
+}
+div.card-block {
+    background-color: #28527A;
+}         
+div.card {
+    border-color: #28527A;
 }
