--- a/scss/pre.scss
+++ b/scss/pre.scss
@@ -1,3 +1,6 @@
 // Pre SCSS for the theme.
 $primary: #28527A;
 $secondary: #28527A;
+$input-border-color: #28527A;
+$enable-rounded: true;
+$body: #fafafa;
